# freebsd-ports-haskell

devel/hs-cabal-install/: Makefile
devel/hs-cpphs/: Makefile
devel/hs-darcs/: Makefile  distinfo
devel/hs-ghc-events/: Makefile
devel/hs-ghcprofview/: Makefile
devel/hs-git-annex/: Makefile
devel/hs-haddock/: Makefile
devel/hs-hlint/: Makefile
devel/hs-hpack/: Makefile
devel/hs-shake/: Makefile
devel/hs-threadscope/: Makefile
devel/stack/: Makefile  distinfo
games/hedgewars-server/: Makefile
lang/ghc/: Makefile
lang/ghc/files/: extra-patch-libraries_ghc-prim_ghc-prim.cabal
lang/purescript/: Makefile
security/hs-cryptol/: Makefile
textproc/hs-lhs2tex/: Makefile
textproc/hs-yaml/: Makefile
www/hs-DAV/: Makefile
www/hs-wai-app-static/: Makefile
www/hs-yesod-bin/: Makefile
x11-wm/hs-xmonad/: Makefile
x11/conlecterm/: Makefile
